feat: global theming, UI/infra upgrades, and flash-free dark mode -- Implement global ThemeProvider for app-wide dark/light mode; Fix flash of default theme with index.html IIFE; Refactor ThemeToggle to use context and useLocalStorage; Add shadcn/ui components and supporting dependencies; Update Tailwind and UI config for new design system; Add new UI components (Button, Card, etc.); General infra and config improvements; Remove redundant theme effect and clean up code

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -10,3 +10,16 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
+<script>
+  (function() {
+    try {
+      let theme = localStorage.getItem('theme');
+      if (!theme) {
+        theme = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+      }
+      document.documentElement.classList.remove('light', 'dark');
+      document.documentElement.classList.add(theme);
+    } catch (e) {}
+  })();
+  </script>
